# src/app/services/models/input-source.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface InputSource {
+  byteStream?: {
+};
+  characterStream?: {
+};
+  empty?: boolean;
+  encoding?: string;
+  publicId?: string;
+  systemId?: string;
+}
